--- a/index.html
+++ b/index.html
@@ -1,1 +1,18 @@
-Geoffery L. Miller (Geo)
+<!DOCTYPE html>
+<head>
+<title>About Geo</title>
+<link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap.min.css">
+</head>
+<body>
+<div class="container">
+
+<div class="page-header">
+  <h1>Geoffery L. Miller (Geo)</h1>
+</div>
+
+</div>
+
+<script src="http://code.jquery.com/jquery-1.10.1.min.js"></script>
+<script src="//netdna.bootstrapcdn.com/bootstrap/3.0.0/js/bootstrap.min.js"></script>
+</body>
+</html>
