--- a/index.html
+++ b/index.html
@@ -1,9 +1,12 @@
 <!DOCTYPE html>
 <head>
 <title>About Geo</title>
-<link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap.min.css">
+<link rel="stylesheet" href="http://netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap.min.css">
+<link rel="stylesheet" href="custom.css">
 </head>
 <body>
+
+<div id="wrap">
 <div class="container">
 
 <div class="page-header">
@@ -11,8 +14,16 @@
 </div>
 
 </div>
+</div>
+
+<div id="footer">
+<div class="container">
+<p class="pull-left text-muted credit">Geo does stuff</p>
+<img src="image.jpg" class="pull-right">
+</div>
+</div>
 
 <script src="http://code.jquery.com/jquery-1.10.1.min.js"></script>
-<script src="//netdna.bootstrapcdn.com/bootstrap/3.0.0/js/bootstrap.min.js"></script>
+<script src="http://netdna.bootstrapcdn.com/bootstrap/3.0.0/js/bootstrap.min.js"></script>
 </body>
 </html>
