some work stuff

--- a/index.html
+++ b/index.html
@@ -9,8 +9,55 @@
 <div id="wrap">
 <div class="container">
 
-<div class="page-header">
-  <h1>Geoffery L. Miller (Geo)</h1>
+<div class="navbar navbar-default navbar-fixed-top">
+<div class="container">
+  <div class="navbar-collapse collape">
+    <div class="btn-toolbar pull-right"><div class="btn-group">
+      <button type="button" class="btn btn-default scroll" data-href="#me"><span class="glyphicon glyphicon-user"></span></button>
+      <button type="button" class="btn btn-default scroll" data-href="#projects"><span class="glyphicon glyphicon-cog"></span></button>
+      <button type="button" class="btn btn-default scroll" data-href="#work"><span class="glyphicon glyphicon-lock"></span></button>
+      <button type="button" class="btn btn-default scroll" data-href="#academics"><span class="glyphicon glyphicon-book"></span></button>
+      <button type="button" class="btn btn-default scroll" data-href="#fun"><span class="glyphicon glyphicon-heart"></span></button>
+
+    </div></div>
+  </div>
+</div>
+</div>
+
+<div id="me" class="page-header">
+  <h1><span class="glyphicon glyphicon-user"></span> Geoffery L. Miller (Geo)</h1>
+  <div class="jumbotron">
+    <p>Hey, I'm Geo.  You can find me on <a href="https://github.com/georules">github</a>, <a href="https://www.facebook.com/geo.miller">facebook</a>, <a href="https://twitter.com/georules">twitter</a>, <a href="http://www.linkedin.com/pub/geoffery-miller/14/b61/860">linkedin</a>, or just <a href="mailto:geoffery.miller@gmail.com">email me</a>.</p>
+  </div>
+</div>
+
+<div id="projects" class="container row">
+  <h2><span class="glyphicon glyphicon-cog"></span> Projects</h2>
+</div>
+
+<div id="work" class="container row">
+  <h2><span class="glyphicon glyphicon-lock"></span> Work</h2>
+  <div class="col-md-4"><div class="well"><h3>Assistant Teaching Professor</h3>
+    <p>Problem Solving with Object Oriented Programming</p>
+    <p>Interdisciplinary Web Development</p>
+  </div></div>
+  <div class="col-md-4"><div class="well"><h3>Assistant Director</h3>
+    <p class="text-center"><a href="http://pic.fsu.edu/"><img src="pic.png" class="img-rounded"/></a></p>
+    <p><a href="http://pic.fsu.edu/">Program in Interdisciplinary Computing</a>,<br/> <a href="http://www.fsu.edu/">Florida State University</a></p>
+  </div></div>
+  <div class="col-md-4"><div class="well"><h3>DIGITECH Co-Creator</h3>
+    <p class="text-center"><a href="http://digitech.fsu.edu/"><img class=" img-rounded"src="digitech.png"/></a></p>
+    <p><a href="http://digitech.fsu.edu">DIGITECH</a>: a showcase of student innovation with technology.</p>
+    <p>Executive Committee, Lead Judge, Web Engineer</p>
+  </div></div>
+</div>
+
+<div id="academics" class="container row">
+  <h2><span class="glyphicon glyphicon-book"></span> Academics</h2>
+</div>
+
+<div id="fun" class="container row">
+  <h2><span class="glyphicon glyphicon-heart"></span> Fun</h2>
 </div>
 
 </div>
@@ -19,11 +66,12 @@
 <div id="footer">
 <div class="container">
 <p class="pull-left text-muted credit">Geo does stuff</p>
-<img src="image.jpg" class="pull-right">
+<img src="image.jpg" class="img-circle pull-right">
 </div>
 </div>
 
 <script src="http://code.jquery.com/jquery-1.10.1.min.js"></script>
 <script src="http://netdna.bootstrapcdn.com/bootstrap/3.0.0/js/bootstrap.min.js"></script>
+<script src="custom.js"></script>
 </body>
 </html>
