old title for now

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 
 <div id="work" class="container row">
   <h2><span class="glyphicon glyphicon-lock"></span> Work</h2>
-  <div class="col-md-4"><div class="well"><h3>Assistant Teaching Professor</h3>
+  <div class="col-md-4"><div class="well"><h3>Assistant in Arts &amp; Sciences</h3><h4>Teaching Faculty</h4>
     <p>Problem Solving with Object Oriented Programming</p>
     <p>Interdisciplinary Web Development</p>
   </div></div>
