--- a/index.html
+++ b/index.html
@@ -38,8 +38,10 @@
 <div id="work" class="container row">
   <h2><span class="glyphicon glyphicon-lock"></span> Work</h2>
   <div class="col-md-4"><div class="well"><h3>Assistant in Arts &amp; Sciences</h3><h4>Teaching Faculty</h4>
-    <p>Problem Solving with Object Oriented Programming</p>
-    <p>Interdisciplinary Web Development</p>
+    <ul>
+    <li>Problem Solving with Object Oriented Programming</li>
+    <li>Interdisciplinary Web Development</li>
+    </ul>
   </div></div>
   <div class="col-md-4"><div class="well"><h3>Assistant Director</h3>
     <p class="text-center"><a href="http://pic.fsu.edu/"><img src="pic.png" class="img-rounded"/></a></p>
