--- a/index.html
+++ b/index.html
@@ -44,8 +44,9 @@
     </ul>
   </div></div>
   <div class="col-md-4"><div class="well"><h3>Assistant Director</h3>
-    <p class="text-center"><a href="http://pic.fsu.edu/"><img src="pic.png" class="img-rounded"/></a></p>
-    <p><a href="http://pic.fsu.edu/">Program in Interdisciplinary Computing</a>,<br/> <a href="http://www.fsu.edu/">Florida State University</a></p>
+    <p class="text-center"><a href="http://pic.fsu.edu/"><img src="pic.png" class="img-rounded"/></a> <a href="http://www.fsu.edu"><img src="fsu.jpg" width="100"class="img-rounded"></a></p>
+    <p><a href="http://pic.fsu.edu/">Program in Interdisciplinary Computing (PIC)</a>,</p>
+    <p><a href="http://www.fsu.edu/">Florida State University (FSU)</a></p>
   </div></div>
   <div class="col-md-4"><div class="well"><h3>DIGITECH Co-Creator</h3>
     <p class="text-center"><a href="http://digitech.fsu.edu/"><img class=" img-rounded"src="digitech.png"/></a></p>
