--- a/index.html
+++ b/index.html
@@ -57,6 +57,22 @@
 
 <div id="academics" class="container row">
   <h2><span class="glyphicon glyphicon-book"></span> Academics</h2>
+  <h3>Publications</h3>
+  <h4>FSU College of Medicine, <a href="http://med.fsu.edu/index.cfm?page=biomedicalSciences.cappendijkLab">Cappendijk Lab</a></h4>
+  <ul>
+<li>Cappendijk SLT, <em>Miller GL</em>, Yount PL, van Engelen RA, <a href="http://www.ncbi.nlm.nih.gov/pubmed/23208000">Automatic data analysis of real-time song and locomotor activity in zebra finches.</a> Int J Bioinformatics Res &amp; Applications, 9.1 (2013): 91-108</li>
+  <li>Cappendijk SLT, Pirvan DF, <em>Miller GL</em>, Rodriguez MI, Chalise P, Halquist MS, James JR, <a href="http://www.ncbi.nlm.nih.gov/pubmed/20471408">In vivo nicotine exposure in the zebra finch; a promising innovative animal model to use in neurodegenerative disorders related research.</a> Pharmacol Biochem Behav. 96(2):152-9, 2010</li>
+  </ul>
+  <h3>Coursework</h3>
+  <div class="col-md-6">
+  <h4>M.Sc. Scientific Computing, Florida State University, May 2011</h4>
+  <p>Thesis: Assessment of Parametric Uncertainty using Markov Chain Monte Carlo Methods for Surface Complexation Models in Groundwater Reactive Transport Modeling.  <a href="http://adsabs.harvard.edu/abs/2010AGUFM.H42D..03M">Presented, AGU 2010.</a> <a href="http://people.sc.fsu.edu/~mye/ORAU.php">Defense Accepted, 2011.</a></p> 
+  <p>High Performance Computing, Data Visualization, Model Validation and Verification, Numerical Modeling</p> 
+  </div>
+  <div class="col-md-6">
+  <h4>B.Sc. Computer Science, Florida State University, April 2008</h4>
+  <p>Programming Languages, Data Structures, Algorithms, Descrete Mathematics</p>
+  </div>
 </div>
 
 <div id="fun" class="container row">
