--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
   </div>
   <div class="col-md-6">
   <h4>B.Sc. Computer Science, Florida State University, April 2008</h4>
-  <p>Programming Languages, Data Structures, Algorithms, Descrete Mathematics</p>
+  <p>Programming Languages, Data Structures, Algorithms, Discrete Mathematics</p>
   </div>
 </div>
 
