--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 <div class="row">
   <div class="col-md-4">
   <h3>QuickClock Advanced Overclock</h3>
-  <p><a href="https://play.google.com/store/apps/details?id=com.jpapps.quickclockadvanced&hl=en">QCA</a> by <a href="https://play.google.com/store/apps/developer?id=JPApps&hl=en">JPApps</a> is an overclocking utility, and battery optimizer. QCA automatically determines the ideal scaling voltages and overclocked speeds for your device's processor as well as the maximum speed and implements safegaurds to reduce the possibility for any kind of damage.</p><p>QCA targeted android devices in the Droid 1 through X generations.  It has not been updated to support any current dual-core or betterdevices.</p><p>I created the framework for the user interface and stress tester.  Paul Anderson integrated the overclocking module and designed the artwork.</p>
+  <p><a href="https://play.google.com/store/apps/details?id=com.jpapps.quickclockadvanced&hl=en">QCA</a> by <a href="https://play.google.com/store/apps/developer?id=JPApps&hl=en">JPApps</a> is an overclocking utility, and battery optimizer. QCA automatically determines the ideal scaling voltages and overclocked speeds for your device's processor as well as the maximum speed and implements safegaurds to reduce the possibility for any kind of damage.</p><p>QCA targeted android devices in the Droid 1 through X generations.  It has not been updated to support any current dual-core or newer devices.</p><p>I created the framework for the user interface and stress tester.  Paul Anderson integrated the overclocking module and designed the artwork.</p>
   </div>
 
   <div class="col-md-4">
