--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 
   <div class="col-md-4">
   <h3>Tributary</h3>
-  <p>enjalot's <a href="http://tributary.io/">Tributary</a> is a live javascript, coffeescript, and processing.js editor aimed at primarily utilizing <a href="http://d3js.org/">d3.js</a> to create data visualizations, geometrical drawings, and animations.  It uses <a href="https://gist.github.com/">github gists</a> to save and fork code from its users.</p>
+  <p><a href="https://github.com/enjalot"></a>enjalot</a>'s <a href="http://tributary.io/">Tributary</a> is a live javascript, coffeescript, and processing.js editor aimed at primarily utilizing <a href="http://d3js.org/">d3.js</a> to create data visualizations, geometrical drawings, and animations.  It uses <a href="https://gist.github.com/">github gists</a> to save and fork code from its users.</p>
 <ul><li>I have contributed to this project by adding in an in-browser screenshot capability, to add life to <a href="http://tributary.io/s/6094415?user=enjalot">user</a> <a href="http://tributary.io/inlet/6616371">pages</a> and the <a href="http://tributary.io/s/6722486">recent inlets page</a>.</li>
 <li>I have also contributed to <a href="http://enjalot.github.io/Inlet/">Inlet</a>, tributary's <a href="http://codemirror.net/">codemirror</a> plugin to utilize the <a href="https://github.com/nornagon/thistle/">thistle</a> color picker.</li> 
 <li>I am currently working on implementing a loop depth counter to prevent infinite loops from crashing the application from being automatically evaluated.</li>
