--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <head>
 <title>About Geo</title>
-<link rel="stylesheet" href="http://netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap.min.css">
-<link rel="stylesheet" href="custom.css">
+<link rel="stylesheet" href="css/bootstrap.min.css">
+<link rel="stylesheet" href="css/custom.css">
 </head>
 <body>
 
@@ -15,7 +15,7 @@
     <div class="btn-toolbar pull-right"><div class="btn-group">
       <button type="button" class="btn btn-default scroll" data-href="#me"><span class="glyphicon glyphicon-user"></span></button>
       <button type="button" class="btn btn-default scroll" data-href="#projects"><span class="glyphicon glyphicon-cog"></span></button>
-      <button type="button" class="btn btn-default scroll" data-href="#work"><span class="glyphicon glyphicon-lock"></span></button>
+      <button type="button" class="btn btn-default scroll" data-href="#work"><span class="glyphicon glyphicon-briefcase"></span></button>
       <button type="button" class="btn btn-default scroll" data-href="#academics"><span class="glyphicon glyphicon-book"></span></button>
       <button type="button" class="btn btn-default scroll" data-href="#fun"><span class="glyphicon glyphicon-heart"></span></button>
 
@@ -38,7 +38,7 @@
 <hr/>
 
 <div id="work" class="container row">
-  <h2><span class="glyphicon glyphicon-lock"></span> Work</h2>
+  <h2><span class="glyphicon glyphicon-briefcase"></span> Work</h2>
   <div class="col-md-4"><div class="well"><h3>Assistant in Arts &amp; Sciences</h3><h4>Teaching Faculty</h4>
     <ul>
     <li>Problem Solving with Object Oriented Programming</li>
