--- a/index.html
+++ b/index.html
@@ -37,11 +37,11 @@
 <div class="row">
   <div class="col-md-4">
     <h3>The Code Lab</h3>
-    <p>The Code Lab is exploring web front-end programming interfaces.  It aims to close the distance between writing code, trying it, seeing results, and also finding code examples that solve small problems.  It currently has two live demos:</p>
+    <p>The Code Lab is exploring web front-end programming interfaces.  It aims to close the distance between writing code, trying it, seeing results, and also finding code examples that solve small problems.  It currently has threee demos:</p>
 <ul>
-  <li><a href="http://ec2-54-211-57-158.compute-1.amazonaws.com:1337/">Code Lab 0.1</a>  A simple 3 text box python editor and executor.  This version implements both the front end sending input and code to recieve output and/or errors, and a prototypal code execution api service. (The code execution service crashes a good bit, so this might not be working currently.)</li>
   <li><a href="http://ec2-54-211-57-158.compute-1.amazonaws.com:9090/">Code Lab Web 0.1</a>  A collaborative live HTML/CSS editor.  This has explored the use of <a href="https://www.firebase.com/">Firebase</a> and <a href="http://sharejs.org/">ShareJS</a> for OT data synchronization.</li>
   <li><a href="http://codebootcamp.me">Code BootCamp</a>  An experiment in creating an online textbook/tutorial along with an interactive code editor (JavaScript).  The code editor will report errors, block malicious code, and timeout infitine loops.</li>
+  <li><a href="http://ec2-54-211-57-158.compute-1.amazonaws.com:1337/">Code Lab 0.1</a>  The first experiment for the code lab, this is a simple 3 text box python editor and executor.  This version implements both the front end sending input and code to recieve output and/or errors, and a prototypal code execution api service. (The code execution service crashes a good bit, so this might not be working currently.)</li>
 </ul>
   </div>
 
