--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 <div class="row">
   <div class="col-md-6">
     <h3>The Code Lab</h3>
-    <p>The Code Lab is exploring web front-end programming interfaces.  It aims to close the distance between writing code, trying it, seeing results, and also finding code examples that solve small problems.  It currently has threee demos:</p>
+    <p>The Code Lab is exploring web front-end programming interfaces.  It aims to close the distance between writing code, trying it, seeing results, and also finding code examples that solve small problems.  It currently has three demos:</p>
 <ul>
   <li><a href="http://ec2-54-211-57-158.compute-1.amazonaws.com:9090/">Code Lab Web 0.1</a>  A collaborative live HTML/CSS editor.  This has explored the use of <a href="https://www.firebase.com/">Firebase</a> and <a href="http://sharejs.org/">ShareJS</a> for OT data synchronization.</li>
   <li><a href="http://codebootcamp.me">Code BootCamp</a>  An experiment in creating an online textbook/tutorial along with an interactive code editor (JavaScript).  The code editor will report errors, block malicious code, and timeout infinite loops.</li>
