--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 <ul><li>I have contributed to this project by adding in an in-browser screenshot capability, to add life to <a href="http://tributary.io/s/6094415?user=enjalot">user</a> <a href="http://tributary.io/inlet/6616371">pages</a> and the <a href="http://tributary.io/s/6722486">recent inlets page</a>.</li>
 <li>I accelerated page load times by minifying some resources in the project build and caching data using MongoDB that is stored in github.</li>
 <li>I have also contributed to <a href="http://enjalot.github.io/Inlet/">Inlet</a>, tributary's <a href="http://codemirror.net/">codemirror</a> plugin to utilize the <a href="https://github.com/nornagon/thistle/">thistle</a> color picker.</li> 
-<li>I am currently working on implementing a loop depth counter to prevent infinite loops from crashing the application from being automatically evaluated.</li>
+<li>I am currently testing the use of loop depth counters with esprima and <a href="https://github.com/georules/tributary/tree/loopprotect">loop timers</a> to prevent (potential) infinite loops from crashing the application when being automatically evaluated.</li>
 </ul>
 
 
