--- a/index.html
+++ b/index.html
@@ -85,8 +85,9 @@
   <h2><span class="glyphicon glyphicon-briefcase"></span> Work</h2>
   <div class="col-md-4"><div class="well"><h3>Assistant in Arts &amp; Sciences</h3><h4>Teaching Faculty</h4>
     <ul>
-    <li>Problem Solving with Object Oriented Programming</li>
-    <li>Interdisciplinary Web Development</li>
+    <li><a href="http://pic.fsu.edu/courses/oop/">Problem Solving with Object Oriented Programming</a></li>
+    <li><a href="http://pic.fsu.edu/courses/webdev/">Interdisciplinary Web Development</a></li>
+    <li><a href="http://pic.fsu.edu/courses/webapps/">Web Applications</a></li>
     </ul>
   </div></div>
   <div class="col-md-4"><div class="well"><h3>Assistant Director</h3>
