--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 <div id="me" class="page-header">
   <h1><span class="glyphicon glyphicon-user"></span> Geoffery L. Miller (Geo)</h1>
   <div class="jumbotron">
-    <p>Hey, I'm Geo.  You can find me on <a href="https://github.com/georules">github</a>, <a href="https://www.facebook.com/geo.miller">facebook</a>, <a href="https://twitter.com/georules">twitter</a>, <a href="http://www.linkedin.com/pub/geoffery-miller/14/b61/860">linkedin</a>, or just <a href="mailto:geoffery.miller@gmail.com">email me</a>.</p>
+    <p>Hey, I'm Geo.  You can find me on <a href="https://github.com/georules">github</a>, <a href="https://www.facebook.com/geo.miller">facebook</a>, <a href="https://twitter.com/storesyntax">twitter</a>, <a href="http://www.linkedin.com/pub/geoffery-miller/14/b61/860">linkedin</a>, or just <a href="mailto:geoffery.miller@gmail.com">email me</a>.</p>
   </div>
 </div>
 
