--- a/index.html
+++ b/index.html
@@ -42,6 +42,22 @@
         </div>
     </header>
 
+    <section id="about" class="about-section content-section text-center">
+        <div class="container">
+
+            <div class="row about-subsection">
+
+                <div class="col-md-8">
+
+                </div>
+                <div class="col-md-4">
+                  
+
+                </div>
+            </div>
+         </div>
+    </section>
+
 
     <!-- Footer -->
     <footer>
