--- a/index.html
+++ b/index.html
@@ -28,8 +28,7 @@
 <body id="page-top" data-spy="scroll" data-target=".navbar-fixed-top">
 
 
-    <!-- Intro Header -->
-    <header class="intro">
+    <section class="intro">
         <div class="intro-body">
             <div class="container">
                 <div class="row">
@@ -40,7 +39,7 @@
                 </div>
             </div>
         </div>
-    </header>
+    </section>
 
     <section id="about" class="about-section content-section text-center">
         <div class="container">
