--- a/index.html
+++ b/index.html
@@ -13,8 +13,6 @@
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <link href="css/grayscale.css" rel="stylesheet">
     <link href="font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
-    <link href="http://fonts.googleapis.com/css?family=Lora:400,700,400italic,700italic" rel="stylesheet" type="text/css">
-    <link href="http://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css">
 
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -28,11 +26,13 @@
 <body id="page-top" data-spy="scroll" data-target=".navbar-fixed-top">
 
 
+
+
     <section class="intro">
         <div class="intro-body">
             <div class="container">
                 <div class="row">
-                    <div class="col-md-8 col-md-offset-2">
+                    <div class="col-md-12">
                         <h1 class="brand-heading">codeslam</h1>
                         <p class="intro-text">interactive code experiences</p>
                     </div>
@@ -76,6 +76,52 @@
 
     <!-- Custom Theme JavaScript -->
     <script src="js/grayscale.js"></script>
+
+    <script src="js/d3.min.js"></script>
+    <script src="js/d3.superformula.min.js"></script>
+<script>
+
+//mod from http://bl.ocks.org/mbostock/3081153 and http://bl.ocks.org/mbostock/1020902
+//http://bl.ocks.org/mbostock/1021103
+
+var svg = d3.select(".intro").append("svg")
+    .attr("width", window.innerWidth)
+    .attr("height", window.innerHeight);
+
+    var size = 3000;
+
+    var x = d3.scale.ordinal()
+        .domain(d3.superformulaTypes)
+        .rangePoints([0, 960], 1);
+
+    var big = d3.superformula()
+        .type("circle")
+        .size(size * 50)
+        .segments(512);
+
+    var path = svg.append("path")
+        .attr("class", "big")
+        .attr("transform", "translate("+window.innerWidth/2+","+window.innerHeight/2+")")
+        .attr("d", big)
+        .attr("stroke",'#000')
+        .attr("fill","transparent")
+        .attr("stroke-width","2px")
+
+    var ii = d3.superformulaTypes.indexOf("circle")+1;
+    function loop() {
+      d = d3.superformulaTypes[ii]
+      d3.select(".big").transition().duration(1000).attr("d", big.type(d))
+      .delay(500)
+      .each("end", loop);
+      ii = (ii+1 == d3.superformulaTypes.length) ? 0 : ii+1;
+    }
+    loop()
+
+    window.onresize = function() {
+      path.attr("transform", "translate("+window.innerWidth/2+","+window.innerHeight/2+")")
+    }
+
+</script>
 
 </body>
 
