--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@ var svg = d3.select(".intro-svg")
         .attr("class", "big")
         .attr("transform", "translate("+window.innerWidth/2+","+window.innerHeight/5+")")
         .attr("d", big)
-        .attr("stroke",'#000')
+        .attr("stroke",'#ccc')
         .attr("fill","transparent")
         .attr("stroke-width","2px")
 
