--- a/index.html
+++ b/index.html
@@ -101,9 +101,9 @@ var svg = d3.select(".intro-svg")
         .attr("class", "big")
         .attr("transform", "translate("+window.innerWidth/2+","+window.innerHeight/5+")")
         .attr("d", big)
-        .attr("stroke",'#ccc')
+        .attr("stroke",'#aaa')
         .attr("fill","transparent")
-        .attr("stroke-width","2px")
+        .attr("stroke-width","5px")
 
     var ii = d3.superformulaTypes.indexOf("circle")+1;
     function loop() {
