--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@ var svg = d3.select(".intro-svg")
 
     var path = svg.append("path")
         .attr("class", "big")
-        .attr("transform", "translate("+window.innerWidth/2+","+window.innerHeight/5+")")
+        .attr("transform", "translate("+window.innerWidth/2+","+size/4+")")
         .attr("d", big)
         .attr("stroke",'#aaa')
         .attr("fill","transparent")
@@ -116,7 +116,7 @@ var svg = d3.select(".intro-svg")
     loop()
 
     window.onresize = function() {
-      path.attr("transform", "translate("+window.innerWidth/2+","+window.innerHeight/5+")")
+      path.attr("transform", "translate("+window.innerWidth/2+","+size/4+")")
     }
 
 </script>
