--- a/index.html
+++ b/index.html
@@ -84,7 +84,9 @@
 
 var svg = d3.select(".intro-svg")
     .attr("width", window.innerWidth)
-    .attr("height", window.innerHeight);
+    .attr("height", window.innerHeight)
+    .attr("top", 0)
+    .attr("left",0)
 
     var size = window.innerWidth/2;
 
