--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@ var svg = d3.select(".intro-svg")
     .attr("top", 0)
     .attr("left",0)
 
-    var size = window.innerWidth/2;
+    var size = window.innerHeight/2;
 
     var x = d3.scale.ordinal()
         .domain(d3.superformulaTypes)
@@ -101,7 +101,7 @@ var svg = d3.select(".intro-svg")
 
     var path = svg.append("path")
         .attr("class", "big")
-        .attr("transform", "translate("+window.innerWidth/2+","+size/4+")")
+        .attr("transform", "translate("+window.innerWidth/2+","+size/3+")")
         .attr("d", big)
         .attr("stroke",'#aaa')
         .attr("fill","transparent")
@@ -118,7 +118,7 @@ var svg = d3.select(".intro-svg")
     loop()
 
     window.onresize = function() {
-      path.attr("transform", "translate("+window.innerWidth/2+","+size/4+")")
+      path.attr("transform", "translate("+window.innerWidth/2+","+size/3+")")
     }
 
 </script>
