--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                 <div class="row">
                     <div class="col-md-12">
                         <h1 class="brand-heading">codeslam</h1>
-                        <p class="intro-text">interactive code experiences</p>
+                        <p class="intro-text"><span>interactive code experiences</span></p>
                     </div>
                 </div>
                 <div class="row">
@@ -165,7 +165,7 @@ var svg = d3.select(".intro-svg")
         .attr("class", "big")
 .attr("transform", "translate("+window.innerWidth/2+","+size/3+")")
         .attr("d", big)
-        .attr("stroke",'#aaa')
+        .attr("stroke",'steelblue')
         .attr("fill","transparent")
         .attr("stroke-width","5px")
 
